--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "interviewapp",
+  "name": "adidas-interview",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Job interview bot for Adidas",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^4.18.2",
+    "@google/generative-ai": "^0.12.0", 
+    "dotenv": "^16.3.1"
   }
 }
