--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "@google/generative-ai": "^0.12.0", 
-    "dotenv": "^16.3.1"
+    "@google/generative-ai": "^0.12.0",
+    "dotenv": "^16.3.1",
+    "nodemailer": "^6.9.7"
   }
 }
