--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "@google/generative-ai": "^0.12.0",
-    "dotenv": "^16.3.1",
-    "nodemailer": "^6.9.7"
+    "dotenv": "^16.3.1"
   }
 }
